<resources>
    <string name="app_name">ANODA-Turn-Timer</string>
    <string name="turn_timer">Turn Timer</string>
    <string name="description_settings">Open App Settings</string>
    <string name="description_share">Share App</string>
    <string name="description_back">Go back</string>
    <string name="description_start">Start timer</string>
    <string name="description_pause">Pause timer</string>
    <string name="description_restart">Restart timer</string>
    <string name="beep_before_round_ends">Beep before round ends</string>
    <string name="round_duration">Round duration</string>
    <string name="share_description">ANODA Turn Timer. Enjoy games with friends \n https://play.google.com/store/details?id=%s</string>
    <string name="time_input_digits">0123456789</string>
</resources>
