<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:fitsSystemWindows="true"
    android:padding="15dp"
    tools:context=".ui.timer.TimerActivity">

    <anoda.mobi.anoda_turn_timer.view.TimerProgressBackgroundView
        android:id="@+id/tpbvTimerBackground"
        android:layout_width="320dp"
        android:layout_height="320dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ViewSwitcher
        android:id="@+id/vsTimerButtons"
        android:layout_width="@dimen/time_picker_oval_width"
        android:layout_height="@dimen/time_picker_oval_width"
        app:layout_constraintBottom_toBottomOf="@+id/tpbvTimerBackground"
        app:layout_constraintEnd_toEndOf="@+id/tpbvTimerBackground"
        app:layout_constraintStart_toStartOf="@+id/tpbvTimerBackground"
        app:layout_constraintTop_toTopOf="@+id/tpbvTimerBackground">

        <TextView
            android:id="@+id/tvTimerText"
            style="@style/TitleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textSize="90sp"
            tools:text="00:00" />

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/ivBtnReset"
            android:layout_width="143dp"
            android:layout_height="116dp"
            android:layout_marginStart="43dp"
            android:layout_marginTop="67dp"
            android:contentDescription="@string/description_restart"
            app:srcCompat="@drawable/ic_reset_ripple" />

    </ViewSwitcher>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintNavigation"
        android:layout_width="315dp"
        android:layout_height="125dp"
        android:layout_marginTop="83dp"
        android:background="@drawable/ic_combined_shape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tpbvTimerBackground">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/ivSettings"
            android:layout_width="@dimen/circle_button_size_horizontal"
            android:layout_height="@dimen/circle_button_size_horizontal"
            android:layout_marginStart="12dp"
            android:layout_marginTop="38dp"
            android:contentDescription="@string/description_settings"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_settings_ripple" />

        <ViewSwitcher
            android:id="@+id/vsActionButtons"
            android:layout_width="@dimen/circle_button_start_pause_size"
            android:layout_height="@dimen/circle_button_start_pause_size"
            android:layout_marginStart="107dp"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="108dp"
            android:layout_marginBottom="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/ivStart"
                android:layout_width="@dimen/circle_button_start_pause_size"
                android:layout_height="@dimen/circle_button_start_pause_size"
                android:background="@drawable/ic_start_ripple"
                android:contentDescription="@string/description_start" />

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/ivPause"
                android:layout_width="@dimen/circle_button_start_pause_size"
                android:layout_height="@dimen/circle_button_start_pause_size"
                android:background="@drawable/ic_pause_ripple"
                android:contentDescription="@string/description_pause" />

        </ViewSwitcher>

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/ivReset"
            android:layout_width="@dimen/circle_button_size_horizontal"
            android:layout_height="@dimen/circle_button_size_horizontal"
            android:layout_marginTop="38dp"
            android:layout_marginEnd="12dp"
            android:contentDescription="@string/description_share"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_reset_bg_ripple" />
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>